--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2"
 services:
   app:
-    build: .
+    image: rtcert/vior:latest
     environment:
       - VIOR_PORT=8080
       - VIOR_ELASTIC_URL=http://elastic:9200
